test/reg050/expected
./badbangop.idr:7:1: error: ! is
    not a valid
    operator, expected: "{-"
(!) : List a -> Nat -> Maybe a 
^                              
./baddoublebang.idr:6:28: error: unexpected
    Operator without known fixity:
    !!, expected: "{-"
doubleBang mmn = do pure !!mmn 
                           ^   
